<resources>
    <string name="app_name">day13</string>
    <string name="sign_up">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="username2">USERNAME</string>
    <string name="password2">PASSWORD</string>
</resources>
