<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2"
    android:background="@drawable/space2">

    <View
        android:id="@+id/back_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#99ffffff" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="216dp"
        android:layout_height="117dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        app:srcCompat="@drawable/sdcl_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="200dp">

        <EditText
            android:layout_gravity="center"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style2"
            android:textSize="25sp"
            android:padding="5dp"
            android:hint="@string/username" />

        <EditText
            android:layout_gravity="center"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style2"
            android:textSize="25sp"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/password" />

        <EditText
            android:layout_gravity="center"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style2"
            android:textSize="25sp"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/re_enter_password" />

        <EditText
            android:layout_gravity="center"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style2"
            android:textSize="25sp"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/email" />

        <EditText
            android:layout_gravity="center"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style2"
            android:textSize="25sp"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/name" />

        <Button
            android:background="@drawable/button_style"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="REGISTER"/>
    </LinearLayout>

</RelativeLayout>